28 August 2015: Wouter
	- Fix #697: Get PY_MAJOR_VERSION failure at configure for python
	  2.4 to 2.6.

24 August 2015: Wouter
	- Fix deadlock for local data add and zone add when unbound-control
	  list_local_data printout is interrupted.
	- iana portlist update.
	- Change default of harden-algo-downgrade to off.  This is lenient
	  for algorithm rollover.

13 August 2015: Wouter
	- 5011 implementation does not insist on all algorithms, when
	  harden-algo-downgrade is turned off.
	- Reap the child process that libunbound spawns.

11 August 2015: Wouter
	- Fix #694: configure script does not detect LibreSSL 2.2.2

4 August 2015: Wouter
	- Document that local-zone nodefault matches exactly and transparent
	  can be used to release a subzone.

3 August 2015: Wouter
	- Document in the manual more text about configuring locally served
	  zones.
	- Fix 5011 anchor update timer after reload.
	- Fix mktime in unbound-anchor not using UTC.

30 July 2015: Wouter
	- please afl-gcc (llvm) for uninitialised variable warning.
	- Added permit-small-holddown config to debug fast 5011 rollover.

24 July 2015: Wouter
	- Fix #690: Reload fails when so-reuseport is yes after changing
	  num-threads.
	- iana portlist update.

21 July 2015: Wouter
	- Fix configure to detect SSL_CTX_set_ecdh_auto.
	- iana portlist update.

20 July 2015: Wouter
	- Enable ECDHE for servers.  Where available, use
	  SSL_CTX_set_ecdh_auto() for TLS-wrapped server configurations to
	  enable ECDHE.  Otherwise, manually offer curve p256.
	  Client connections should automatically use ECDHE when available.
	  (thanks Daniel Kahn Gillmor)

18 July 2015: Willem
	- Allow certificate chain files to allow for intermediate certificates.
	  (thanks Daniel Kahn Gillmor)

13 July 2015: Wouter
	- makedist produces sha1 and sha256 files for created binaries too.

9 July 2015: Wouter
	- 1.5.4 release tag
	- trunk has 1.5.5 in development.
	- Fix #681: Setting forwarders with unbound-control forward